# title-hub

./: .oxfmtrc.json  CEO-SPEC.md  Dockerfile  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/worflows/: ci.yml
.github/workflows/: agent-release.yml  ci.yml
agent/: .gitignore  Cargo.toml  README.md  RELEASE.md  SIGNING.md  agent.example.toml
agent/fixtures/: sample.json
agent/src/: client.rs  config.rs  main.rs  proform.rs  setup.rs  snapshot.rs
convex/: accessRequests.ts  agentBootstrap.test.ts  agentBootstrap.ts  audit.ts  auth.ts  authTriggers.ts  chainSummary.ts  closingDay.ts  comments.ts  countyConnect.ts  crons.ts  email.ts  extractionEvents.ts  extractions.ts  extractionsRunner.ts  fileNumberPolicy.ts  files.test.ts  files.ts  findingExplainer.ts  followups.ts  http.ts  inboundEmail.http.test.ts  inboundEmail.test.ts  inboundEmail.ts  inboundEmailClassifier.ts  integrations.test.ts  integrations.ts  integrationsRunner.ts  myQueue.ts  notifications.ts  orders.ts  parties.ts  pipeline.ts  reconciliation.test.ts  reconciliation.ts  reconciliationPolicy.ts  rules.test.ts  rules.ts  schema.ts  search.ts  (+10 more)
convex/_generated/: api.d.ts  api.js  server.d.ts  server.js
convex/betterAuth/: auth.ts  schema.ts
convex/integrations/: mock.ts  registry.ts  softpro360.ts  softproStandard.ts  types.ts
convex/lib/: audit.ts  crypto.ts  fileNumber.ts  reconciliationPolicy.ts  spamScore.test.ts  tenant.ts  (+5 more)
data/: Document2.docx  TECHINAL-SPEC.md  Various AI Prompts (Gen Blue Prompts).docx  preview.html
scripts/: admin.ts  check-resend-inbound.ts  check-tenant-isolation.ts  extract-corey-dr.ts
src/: routeTree.gen.ts  router.tsx  styles.css
(+64 files in other folders)
